--- a/index.html
+++ b/index.html
@@ -22,12 +22,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </head>
 <body>
 
-
-
-
-</body>
-</html>
-
 <!-- //header -->
 <header class="py-4">
 	<div class="container">
@@ -64,3 +58,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<!-- //nav -->
 	</div>
 </header>
+
+<!-- banner -->
+<div class="banner" id="home">
+	<div class="container">
+		<div class="row banner-text">
+			<div class="slider-info col-lg-6">
+				<div class="banner-info-grid mt-lg-5">
+					<h2>Welcome To Digital Marketing Agency </h2>
+					<p>Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at tempus vel, ultrices in ligula.
+					Nulla ut sollicitudin velit. Sed porttitor orci vel fermentum maximus. Curabitur ut turpis massa.</p>
+				</div>
+				<a class="btn mr-2 text-capitalize" href="#popup1">read more </a>
+				<a class="btn text-capitalize" href="#popup2">watch video </a>
+			</div>
+			<div class="col-lg-6 col-md-8 mt-lg-0 mt-sm-5 mt-3 banner-image text-lg-center">
+				<img src="images/bannerpng.png" alt="" class="img-fluid"/>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
+</body>
+</html>
