--- a/index.html
+++ b/index.html
@@ -98,6 +98,51 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </section>
 
+<!-- why choose us -->
+<section class="choose py-5" id="services">
+	<div class="container py-md-3">
+		<h3 class="heading mb-5"> What we provide</h3>
+		<div class="feature-grids row">
+			<div class="col-lg-3 col-sm-6">
+				<div class="f1 icon1 p-4">
+					<div class="icon">
+						<span class="fa fa-bandcamp"></span>
+					</div>
+					<h3 class="my-3">Branding</h3>
+					<p>Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper.</p>
+				</div>
+			</div>
+			<div class="col-lg-3 col-sm-6 mt-sm-0 mt-4">
+				<div class="f1 icon2 p-4">
+					<div class="icon">
+						<span class="fa fa-codepen"></span>
+					</div>
+					<h3 class="my-3">Marketing</h3>
+					<p>Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper.</p>
+				</div>
+			</div>
+			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4">
+				<div class="f1 icon3 p-4">
+					<div class="icon">
+						<span class="fa fa-btc"></span>
+					</div>
+					<h3 class="my-3">Advertising</h3>
+					<p>Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper.</p>
+				</div>
+			</div>
+			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4">
+				<div class="f1 icon4 p-4">
+					<div class="icon">
+						<span class="fa fa-cloud"></span>
+					</div>
+					<h3 class="my-3">Product Sales</h3>
+					<p>Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
 
 
 </body>
