--- a/index.html
+++ b/index.html
@@ -143,6 +143,43 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </section>
 
+<!-- Offered Services -->
+<section class="process py-5" id="process">
+	<div class="container py-md-3">
+		<h3 class="heading mb-5">Marketing Process</h3>
+		<div class="row process-grids">
+			<div class="col-lg-3 col-md-6 my-lg-4 w3pvt-ab position-relative">
+				<div class="">
+					<img src="images/1.png" alt="" class="img-fluid">
+				</div>
+				<h4 class="feed-title my-md-3 mb-3">Marketing Products</h4>
+				<p> Excepteur ut occaecat proident, sunt in culpa quis. Phasellus lacinia id erat risus quis.</p>
+			</div>
+			<div class="col-lg-3 col-md-6 my-lg-4 mt-md-0 mt-4 w3pvt-ab position-relative">
+				<div class="">
+					<img src="images/2.png" alt="" class="img-fluid">
+				</div>
+				<h4 class="feed-title my-md-3 mb-3">Advertising Agency</h4>
+				<p> Excepteur ut occaecat proident, sunt in culpa quis. Phasellus lacinia id erat risus quis.</p>
+			</div>
+			<div class="col-lg-3 col-md-6 my-lg-4 mt-sm-5 mt-4 w3pvt-ab position-relative">
+				<div class="">
+					<img src="images/1.png" alt="" class="img-fluid">
+				</div>
+				<h4 class="feed-title my-md-3 mb-3">Process Planning</h4>
+				<p> Excepteur ut occaecat proident, sunt in culpa quis. Phasellus lacinia id erat risus quis.</p>
+			</div>
+			<div class="col-lg-3 col-md-6 mt-lg-4 mt-sm-5 mt-4 w3pvt-ab">
+				<div class="">
+					<img src="images/2.png" alt="" class="img-fluid">
+				</div>
+				<h4 class="feed-title my-md-3 mb-3">Product Sales</h4>
+				<p> Excepteur ut occaecat proident, sunt in culpa quis. Phasellus lacinia id erat risus quis.</p>
+			</div>
+		</div>
+	</div>
+</section>
+
 
 
 </body>
