--- a/index.html
+++ b/index.html
@@ -180,6 +180,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </section>
 
+<!-- video -->
+<section class="video py-5" id="video">
+	<div class="container">
+		<div class="inner-sec-w3ls py-lg-5 py-3">
+			<div class="row">
+				<div class="col-lg-6 video-right px-lg-5 px-2">
+					<h3 class="tittle-w3">Digital Marketing Business Agency</h3>
+					<p class="mt-4">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type.Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+
+				</div>
+				<div class="col-lg-6 video-img mt-lg-0 mt-4">
+					<img src="images/banner.png" alt="" class="img-fluid">
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
 
 
 </body>
