Add Partners section

--- a/index.html
+++ b/index.html
@@ -287,6 +287,37 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </section>
 
+<!--/Partners-->
+<section class="partners py-5" id="partners">
+	<div class="container py-md-3">
+		<h3 class="heading mb-5">Our Marketing Partners</h3>
+		<div class="inner-sec-w3ls">
+			<div class="sponsers-icon text-center">
+				<ul class="list-unstyled partners-icon row">
+					<li class="col-md-2 col-4">
+						<span class="fa fa-codepen" aria-hidden="true"></span>
+					</li>
+					<li class="col-md-2 col-4 border-left border-right">
+						<span class="fa fa-lastfm" aria-hidden="true"></span>
+					</li>
+					<li class="col-md-2 col-4 border-right">
+						<span class="fa fa-codiepie" aria-hidden="true"></span>
+					</li>
+					<li class="col-md-2 col-4 border-right mt-md-0 mt-3">
+						<span class="fa fa-drupal" aria-hidden="true"></span>
+					</li>
+					<li class="col-md-2 col-4 border-right mt-md-0 mt-3">
+						<span class="fa fa-dashcube" aria-hidden="true"></span>
+					</li>
+					<li class="col-md-2 col-4 mt-md-0 mt-3">
+						<span class="fa fa-skyatlas" aria-hidden="true"></span>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</section>
+
 
 
 </body>
