Add Copyright section and move top

--- a/index.html
+++ b/index.html
@@ -389,6 +389,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </footer>
 
+!-- copyright -->
+<div class="copy-right-top border-top">
+	<p class="copy-right text-center py-4">&copy; 2019 Digital. All Rights Reserved | Design by
+		<a href="#"> Oleh Petraniuk </a>
+	</p>
+</div>
+<!-- //copyright -->	
+	
+<!-- move top -->
+<div class="move-top text-right">
+	<a href="#home" class="move-top"> 
+		<span class="fa fa-angle-up  mb-3" aria-hidden="true"></span>
+	</a>
+</div>
+
 
 
 </body>
