--- a/index.html
+++ b/index.html
@@ -404,6 +404,27 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</a>
 </div>
 
+<!-- popup -->
+<div id="popup1" class="popup-effect">
+	<div class="popup">
+		<img src="images/banner.png" alt="Popup Image" class="img-fluid" />
+		<p class="mt-4 ">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+			laudantium, totam rem aperiam, eaque ipsa quae ab illo quasi architecto beatae vitae dicta
+			sunt explicabo.</p>
+		<a class="close" href="#">&times;</a>
+	</div>
+</div>
+
+<div id="popup2" class="popup-effect">
+	<div class="popup">
+		<iframe src="https://player.vimeo.com/video/188673754"></iframe>
+		<p class="mt-4 ">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+			laudantium, totam rem aperiam, eaque ipsa quae ab illo quasi architecto beatae vitae dicta
+			sunt explicabo.</p>
+		<a class="close" href="#">&times;</a>
+	</div>
+</div>
+
 
 
 </body>
