--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,39 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	
 </head>
 <body>
+    <!-- //header -->
+<header class="py-4">
+	<div class="container">
+			<div id="logo">
+				<h1> <a href="index.html"><span class="fa fa-cloud" aria-hidden="true"></span> Digital</a></h1>
+			</div>
+		<nav class="d-lg-flex">
+
+			<label for="drop" class="toggle"><span class="fa fa-bars" aria-hidden="true"></span></label>
+			<input type="checkbox" id="drop" />
+			<ul class="menu mt-2 ml-auto">
+				<li class=""><a href="index.html">Home</a></li>
+				<li class=""><a href="#about">About</a></li>
+				<li class="">
+				<label for="drop-2" class="toggle">Dropdown <span class="fa fa-angle-down" aria-hidden="true"></span> </label>
+				<a href="#">Dropdown <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+				<input type="checkbox" id="drop-2"/>
+				<ul class="inner-ul">
+					<li><a href="#process">Marketing Process</a></li>
+					<li><a href="#portfolio">Portfolio</a></li>
+				<li><a href="#partners">Partners</a></li>
+				</ul>
+				</li>
+				<li class=""><a href="team.html">Team Page</a></li>
+				<li class=""><a href="contact.html">Contact Page</a></li>
+			</ul>
+			<div class="login-icon ml-lg-2">
+				<a class="user" href="#popup3"> Login</a>
+			</div>
+		</nav>
+		<div class="clear"></div>
+	</div>
+</header>
 
 
 
