--- a/contact.html
+++ b/contact.html
@@ -196,6 +196,32 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</a>
 </div>
 
+<!-- popup for login -->
+<div id="popup3" class="popup-effect">
+	<div class="popup">
+		<div class="login px-sm-4 mx-auto mw-100">
+			<h5 class="text-center mb-4">Login to Digital</h5>
+			<form action="#" method="post">
+				<div class="form-group">
+					<label class="mb-2">Email address</label>
+					<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="" required="">
+					<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+				</div>
+				<div class="form-group">
+					<label class="mb-2">Password</label>
+					<input type="password" class="form-control" id="exampleInputPassword1" placeholder="" required="">
+				</div>
+				<button type="submit" class="btn btn-primary submit mt-2">Login</button>
+				<p class="text-center mt-2">
+					<a href="#popup4"> Don't have an account?</a>
+				</p>
+			</form>
+		</div>
+
+		<a class="close" href="#">&times;</a>
+	</div>
+</div>
+
 
 
 </body>
